Fixes PathVariable problem on /person
